# journal

./: .gitignore  .pymarkdown.json  2025-12-06.md  2025-12-07.md  2025-12-14.md  2025-12-21.md  2025-12-25.md  2025-12-28.md  2025-12-31.md  AGENTS.md  AUTOMATION_README.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SESSION_CONTEXT.md  TEST_SUMMARY.md  backfill_entries.py  commit_agent.py  config.py  coverage.json  cron-setup.sh  index.md  main.py  opencode_client.py  orchestrator.py  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
2025/: 12-feedback.md  12.md
2025/12/: 15.md  22.md  23.md  24.md  26.md  27.md  29.md  30.md  31.md
2026/01/: 01.md  02.md  03.md  04.md  05.md  07.md
agents/: __init__.py  content_generation.py  fact_checking.py  git_analysis.py  orchestrator.py  quality_assurance.py  validator.py
prompts/: fact_checking.txt  orchestration.txt  project_section.txt  quality_assurance.txt  summary.txt
scripts/: lint.sh
tests/: conftest.py  test_cache.py  test_commit_agent.py  test_config.py  test_content_generation.py  test_fact_checking.py  test_git_analysis.py  test_git_utils.py  test_logging_utils.py  test_main.py  test_markdown_utils.py  test_opencode_client.py  test_opencode_utils.py  test_orchestrator.py  test_quality_assurance.py  test_validator.py
tmp/: 2025-12-30_git_data.json  2025-12-31_git_data.json  2026-01-01_git_data.json
utils/: __init__.py  cache.py  git_utils.py  logging_utils.py  markdown_utils.py  opencode_utils.py  retry.py
